[package]
name = "DevilBotRustExt"
version = "0.1.0"
authors = ["Raj Sharma <yrsharma@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["rt-multi-thread", "macros", "signal"] }
colour = "0.5.0"
wikipedia = "0.3.4"
titlecase = "1.0"

[dependencies.serenity]
features = ["framework", "standard_framework", "utils"]
version = "0.10"
